Update title for rental consultation page

--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="Despachos médicos totalmente equipados desde 180€/mes. Habilitación sociosanitaria incluida.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://alquilerconsultasanitaria.org/">
-    <title>Alquiler Consulta Médica con Habilitación Sociosanitaria | Desde 180€/mes</title>
+    <title>Alquiler de Consulta Médica en Pamplona | Centro Sanitario con Habilitación | Desde 180€/mes</title>
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
