Update subtitle with location information

--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -79,7 +79,7 @@
 <body>
     <header>
         <h1>CENTRO SANITARIO LARRABIDE</h1>
-        <p class="subtitle">Alquiler de Consulta Sanitaria — Con Habilitación Sociosanitaria</p>
+        <p class="subtitle">Alquiler de Consulta Sanitaria en Pamplona — Con Habilitación Sociosanitaria</p>
     </header>
 
     <div class="price-banner">
