Update keywords meta tag in index.html

--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Alquila tu consulta médica desde 180€/mes en centro sanitario con habilitación sociosanitaria. Despachos equipados para profesionales de la salud en Pamplona.">
-    <meta name="keywords" content="alquiler consulta médica, despacho sanitario, habilitación sociosanitaria, consulta médica Pamplona, alquiler centro médico, consulta profesionales salud">
+    <meta name="keywords" content="alquiler consulta médica,alquiler consulta sanitaria, consulta sanitaria, habilitación sociosanitaria, consulta médica Pamplona, alquiler centro médico, consulta profesionales salud">
     <meta name="author" content="Centro Médico Alquiler Consultas">
     <meta property="og:title" content="Alquiler de Consulta Sanitaria con Habilitación Sociosanitaria">
     <meta property="og:description" content="Despachos médicos totalmente equipados desde 180€/mes. Habilitación sociosanitaria incluida.">
