Update title and subtitle in index.html

--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="Despachos médicos totalmente equipados desde 180€/mes. Habilitación sociosanitaria incluida.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://alquilerconsultasanitaria.org/">
-    <title>Alquiler de Consulta Médica en Pamplona | Centro Sanitario con Habilitación | Desde 180€/mes</title>
+    <title>Alquiler de Consulta Sanitaria en Pamplona | Habilitación Sociosanitaria | Desde 180€</title>
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -79,7 +79,7 @@
 <body>
     <header>
         <h1>CENTRO SANITARIO LARRABIDE</h1>
-        <h1 class="subtitle">Alquiler de Consulta Sanitaria en Pamplona — Con Habilitación Sociosanitaria</h1>
+        <h2 class="subtitle">Alquiler de Consulta Sanitaria en Pamplona — Con Habilitación Sociosanitaria</h2>
     </header>
 
     <div class="price-banner">
