--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -78,8 +78,8 @@
 </head>
 <body>
     <header>
-        <h1>CENTRO SANITARIO LARRABIDE</h1>
-        <h2 class="subtitle">Alquiler de Consulta Sanitaria en Pamplona — Con Habilitación Sociosanitaria</h2>
+        <h1>Alquiler de Consulta Sanitaria en Pamplona | Centro Sanitario con Habilitación</h1>
+        <h2 class="subtitle">Centro Sanitario Larrabide</h2>
     </header>
 
     <div class="price-banner">
