--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -81,6 +81,14 @@
         <h1>Alquiler de Consulta Sanitaria en Pamplona | Centro Sanitario con Habilitación</h1>
         <h2 class="subtitle">Centro Sanitario Larrabide</h2>
     </header>
+    <p style="max-width:900px;margin:1.5rem auto;text-align:center;color:#474747;font-size:1.1rem;">
+    Alquila tu consulta sanitaria en Pamplona en un centro totalmente habilitado. Espacios profesionales, equipados, con servicios incluidos y disponibilidad inmediata para médicos, psicólogos, fisioterapeutas y otros profesionales de la salud.
+</p>
+
+<div class="price-banner">
+    Alquila tu consulta
+    <span class="price">desde 180€/mes</span>
+</div>
 
     <div class="price-banner">
         Alquila tu consulta
