Add Open Graph meta tags for image and dimensions

--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -10,6 +10,11 @@
     <meta property="og:description" content="Despachos médicos totalmente equipados desde 180€/mes. Habilitación sociosanitaria incluida.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://alquilerconsultasanitaria.org/">
+    <meta property="og:image" content="https://alquilerconsultasanitaria.org/imagen-principal.jpg">
+<meta property="og:image:alt" content="Consulta sanitaria en Pamplona totalmente equipada para profesionales">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
     <title>Alquiler de Consulta Sanitaria en Pamplona | Habilitación Sociosanitaria | Desde 180€</title>
 
     <style>
