--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -27,6 +27,12 @@
             --text-light: #64748b;
             --bg-light: #f8fafc;
             --white: #ffffff;
+            .visually-hidden {
+    position: absolute;
+    left: -9999px;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
         }
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: var(--text-dark); line-height: 1.6; background-color: var(--white); }
         header { background: linear-gradient(135deg, var(--primary-color), var(--secondary-color)); color: var(--white); padding: 2.5rem 1.5rem; text-align: center; box-shadow: 0 4px 6px rgba(0,0,0,0.08); }
