--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -92,7 +92,7 @@
         <h1>Alquiler de Consulta Sanitaria en Pamplona | Centro Sanitario con Habilitación</h1>
         <h1 class="subtitle">Centro Sanitario Larrabide</h1>
     </header>
-    <p style="max-width:900px;margin:1.5rem auto;text-align:center;color:#474747;font-size:1.1rem;">
+    <p class="visually-hidden">
     Alquila tu consulta sanitaria en Pamplona en un centro totalmente habilitado. Espacios profesionales, equipados, con servicios incluidos y disponibilidad inmediata para médicos, psicólogos, fisioterapeutas y otros profesionales de la salud.
 </p>
 
