--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -90,7 +90,7 @@
 <body>
     <header>
         <h1>Alquiler de Consulta Sanitaria en Pamplona | Centro Sanitario con Habilitación</h1>
-        <h1 class="subtitle">Centro Sanitario Larrabide</h1>
+        <h1 class="subtitle">CENTRO SANITARIO LARRABIDE</h1>
     </header>
     <p class="visually-hidden">
     Alquila tu consulta sanitaria en Pamplona en un centro totalmente habilitado. Espacios profesionales, equipados, con servicios incluidos y disponibilidad inmediata para médicos, psicólogos, fisioterapeutas y otros profesionales de la salud.
