--- a/alquilerconsultasanitaria/index.html
+++ b/alquilerconsultasanitaria/index.html
@@ -86,6 +86,17 @@
             .feature-card { padding: 1.5rem; }
         }
     </style>
+    <style>
+#screenSaverOverlay {
+    position: fixed;
+    inset: 0;
+    background: black;
+    opacity: 0;
+    pointer-events: none;
+    z-index: 9999;
+    transition: opacity 2s ease-in-out;
+}
+</style>
 </head>
 <body>
     <header>
@@ -253,5 +264,28 @@
         carousel.addEventListener('mouseenter', () => clearInterval(autoplayInterval));
         carousel.addEventListener('mouseleave', () => autoplayInterval = setInterval(nextSlide, 4000));
     </script>
+    <script>
+document.addEventListener("DOMContentLoaded", () => {
+    const overlay = document.createElement("div");
+    overlay.id = "screenSaverOverlay";
+    document.body.appendChild(overlay);
+
+    function fadeCycle() {
+        // Fade in
+        overlay.style.opacity = "1";
+
+        setTimeout(() => {
+            // Fade out
+            overlay.style.opacity = "0";
+        }, 3000); // Tiempo visible en negro (3 segundos)
+    }
+
+    // Repetir cada 5 minutos (5 * 60 * 1000)
+    setInterval(fadeCycle, 5 * 60 * 1000);
+
+    // Primer fade después de 10 segundos para probar
+    setTimeout(fadeCycle, 10000);
+});
+</script>
 </body>
 </html>
