--- a/pantalla-tv.html
+++ b/pantalla-tv.html
@@ -2,27 +2,35 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Centro Sanitario Larrabide - Pantalla TV</title>
+    <title>Centro Sanitario Larrabide - Proyección TV</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.5/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        body {
+            margin: 0; padding: 0;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to bottom right,#2563eb,#1e40af);
+        }
         .slide-enter {
             animation: fadeIn 1s;
         }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to   { opacity: 1; }
-        }
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0; padding: 0;
-            background: linear-gradient(to bottom right,#2563eb,#1e40af);
-        }
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+        .card { transition: box-shadow .25s, transform .25s;}
+        .card:hover { box-shadow: 0 4px 18px rgba(37,99,235,0.2); transform: translateY(-3px) scale(1.012);}
         @media (orientation: portrait) {
             .slide-content { min-height: 100vh; }
+        }
+        @media (orientation: portrait) and (min-width: 1000px) {
+            h1 {
+                font-size: 3.2rem !important;
+            }
+            .prof-card {
+                font-size: 1.1rem;
+                padding: 2rem 1rem;
+            }
         }
     </style>
 </head>
@@ -30,9 +38,9 @@
 <div id="root"></div>
 <script type="text/babel">
 
+const SLIDE_DURATION = 12000; // Tiempo por slide (12 seg)
 const GOOGLE_SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQZQzlS8zkchIdkBhNbEU5TUk3KS3UVeX5K4yUza_BCQeMmFqraBRovGVEyfUZX59A9stCotFo-LhvO/pub?gid=0&single=true&output=csv';
 
-// Helper parse for both tab/comma export
 function parseCSV(csv) {
     const lines = csv.trim().split('\n');
     if (lines.length < 2) return [];
@@ -49,42 +57,90 @@ function parseCSV(csv) {
     return data.sort((a,b) => (parseInt(a.numeroDespacho)||0)-(parseInt(b.numeroDespacho)||0));
 }
 
-// Opcional: tiempo de transición en milisegundos
-const SLIDE_DURATION = 10000; // 10 segundos
-const PROFESIONALES_POR_SLIDE = 4;
+function Anuncio() {
+    return (
+        <div className="slide-enter slide-content flex flex-col items-center justify-center min-h-screen">
+            <div className="max-w-3xl w-full mx-auto">
+                <div className="bg-white rounded-3xl shadow-2xl px-8 py-10 text-center border-t-8 border-blue-800">
+                    <h1 className="text-4xl md:text-6xl font-bold tracking-wide text-blue-900 mb-4">
+                        centro sanitario larrabide
+                    </h1>
+                    <h2 className="text-2xl md:text-4xl font-bold text-blue-700 mb-4">¡Alquila tu despacho!</h2>
+                    <div className="text-2xl md:text-3xl font-semibold mb-6 text-blue-900">Consultas disponibles</div>
+                    <div className="text-xl md:text-2xl mb-3 font-semibold text-blue-800">
+                        Tef: <span className="underline">643 85 68 07</span>
+                    </div>
+                    <div className="text-lg md:text-2xl mb-7 font-semibold text-blue-800">
+                        Alquiler desde <span className="font-bold">180 euros</span>
+                    </div>
+                    <ul className="text-gray-600 text-xl md:text-2xl mb-6 list-disc mx-auto max-w-lg text-left pl-8">
+                        <li>Despachos equipados con todos los servicios</li>
+                        <li>WiFi, limpieza, recepción compartida</li>
+                        <li>Sala de espera y zona común</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    );
+}
 
-function PantallaTV() {
-    // Estado para profesionales
+function ProfesionalesSlide({ profesionales }) {
+    // Reparte en dos columnas (balanceadas)
+    const mitad = Math.ceil(profesionales.length/2);
+    const col1 = profesionales.slice(0,mitad);
+    const col2 = profesionales.slice(mitad);
+
+    return (
+        <div className="slide-enter slide-content flex flex-col items-center justify-center min-h-screen">
+            <div className="max-w-5xl mx-auto w-full">
+                <div className="bg-white rounded-3xl shadow-2xl px-6 py-10 border-t-8 border-blue-800 w-full">
+                    <h2 className="text-blue-900 font-extrabold text-2xl md:text-4xl mb-8 text-center">Profesionales</h2>
+                    <div className="w-full flex flex-col md:flex-row gap-8 justify-center">
+                        {[col1, col2].map((col,idx)=>(
+                            <div key={idx} className="flex-1 flex flex-col gap-5">
+                                {col.map((prof,ind)=>(
+                                    <div key={prof.numeroDespacho+"-"+prof.nombre}
+                                        className="card prof-card bg-blue-50 rounded-2xl px-6 py-7 shadow-lg border-t-4 border-blue-400 flex gap-4 items-center"
+                                    >
+                                        <div className="bg-blue-600 text-white rounded-lg w-16 h-16 flex items-center justify-center text-3xl font-bold flex-shrink-0 shadow-lg">
+                                            {prof.numeroDespacho}
+                                        </div>
+                                        <div className="flex-grow text-left">
+                                            <div className="text-blue-900 font-bold text-lg mb-1">{prof.especialidad}</div>
+                                            <div className="font-semibold text-gray-800 text-md">{prof.nombre}</div>
+                                            {prof.servicios &&
+                                                <div className="text-gray-600 text-sm mt-1">{prof.servicios}</div>
+                                            }
+                                            <div className="mt-2 space-y-1 text-sm">
+                                                {prof.web &&
+                                                    <div className="text-blue-600 font-medium">
+                                                        <a href={prof.web} target="_blank" rel="noopener noreferrer" className="underline">{prof.web}</a>
+                                                    </div>
+                                                }
+                                                {prof.telefono &&
+                                                    <div className="text-gray-800 font-bold">Cita previa Tlf: {prof.telefono}</div>
+                                                }
+                                            </div>
+                                        </div>
+                                    </div>
+                                ))}
+                            </div>
+                        ))}
+                    </div>
+                </div>
+            </div>
+        </div>
+    );
+}
+
+function TVApp() {
     const [profesionales, setProfesionales] = React.useState([]);
     const [isLoading, setIsLoading] = React.useState(true);
-
-    // Estado del slide
-    const [currentSlide, setCurrentSlide] = React.useState(0);
+    const [slide, setSlide] = React.useState(0);
     const [slideKey, setSlideKey] = React.useState(0);
 
-    // Anuncio: personaliza aquí tu texto!
-    const ANUNCIO = {
-        titulo: "¡Alquila tu despacho!",
-        subtitulo: "Consultas disponibles en el Centro Sanitario Larrabide.",
-        contenido: (
-            <>
-                <div className="text-2xl md:text-4xl font-bold mt-6 mb-4 flex flex-row items-center gap-3 text-blue-800 justify-center">
-                    Tef: <span className="underline ml-2">643 85 68 07</span>
-                </div>
-                <div className="text-lg md:text-2xl mb-6 font-semibold text-blue-700">
-                    Alquiler desde <span className="font-bold">180 euros</span>
-                </div>
-                <ul className="text-gray-600 text-xl md:text-2xl mb-6 list-disc mx-auto max-w-lg text-left pl-6">
-                    <li>Despachos equipados con todos los servicios</li>
-                    <li>WiFi, limpieza, recepción compartida</li>
-                    <li>Sala de espera y zona común</li>
-                </ul>
-            </>
-        )
-    };
-
-    // Cargar Google Sheets profesionales
-    React.useEffect(() => {
+    // Cargar profesionales
+    React.useEffect(()=>{
         async function fetchProfs() {
             setIsLoading(true);
             try {
@@ -94,89 +150,41 @@ function PantallaTV() {
                     let datos = parseCSV(txt);
                     setProfesionales(datos);
                 }
-            } catch {}
+            } catch (e) {}
             setIsLoading(false);
         }
         fetchProfs();
-        // Actualiza cada 10 minutos
         const timer = setInterval(fetchProfs, 600000);
-        return () => clearInterval(timer);
-    }, []);
+        return ()=>clearInterval(timer);
+    },[]);
 
-    // Slides
-    const totalSlidesProfesionales = Math.ceil(profesionales.length/PROFESIONALES_POR_SLIDE);
-    const totalSlides = 1 + totalSlidesProfesionales; // 1 anuncio + profesionales
-
-    // Slide cambio automático
-    React.useEffect(() => {
-        const timer = setInterval(() => {
-            setCurrentSlide(prev => (prev+1)%totalSlides);
-            setSlideKey(prev => prev+1);
+    // Slide automático
+    const totalSlides = 2;
+    React.useEffect(()=>{
+        const timer = setInterval(()=>{
+            setSlide(prev=> (prev+1)%totalSlides);
+            setSlideKey(prev=> prev+1);
         }, SLIDE_DURATION);
         return ()=>clearInterval(timer);
-    }, [totalSlides, profesionales.length]);
+    },[totalSlides]);
 
     let content;
-    if (currentSlide === 0) {
-        // Slide de anuncio
-        content = (
-            <div key={slideKey} className="slide-enter slide-content flex flex-col items-center justify-center min-h-[70vh]">
-                <div className="bg-white rounded-3xl shadow-2xl px-8 py-12 text-center max-w-2xl mx-auto border-t-8 border-blue-600">
-                    <h1 className="text-3xl md:text-6xl font-extrabold text-blue-900 mb-2 drop-shadow">Centro Sanitario Larrabide</h1>
-                    <h2 className="text-2xl md:text-3xl font-bold text-blue-800 mb-3">{ANUNCIO.titulo}</h2>
-                    <div className="text-xl md:text-2xl text-blue-700 mb-2">{ANUNCIO.subtitulo}</div>
-                    {ANUNCIO.contenido}
-                </div>
-            </div>
-        )
+    if (slide === 0) {
+        content = <Anuncio key={slideKey} />;
     } else {
-        // Slide de profesionales (paginar!)
-        const profs = profesionales.slice((currentSlide-1)*PROFESIONALES_POR_SLIDE, currentSlide*PROFESIONALES_POR_SLIDE);
-        content = (
-            <div key={slideKey} className="slide-enter slide-content flex flex-col items-center justify-center min-h-[70vh]">
-                <div className="bg-white rounded-3xl shadow-2xl px-8 py-10 max-w-3xl w-full border-t-8 border-blue-600">
-                    <h2 className="text-blue-900 font-extrabold text-2xl md:text-4xl mb-6 text-center">Profesionales</h2>
-                    <div className="flex flex-col gap-6">
-                        {profs.map((prof,idx)=>(
-                            <div key={prof.numeroDespacho+"-"+prof.nombre}
-                                className="flex items-start gap-5 p-3 bg-blue-50 rounded-2xl shadow border border-blue-200"
-                            >
-                                <div className="bg-blue-600 text-white rounded-lg w-16 h-16 flex items-center justify-center text-3xl font-bold">
-                                    {prof.numeroDespacho}
-                                </div>
-                                <div className="flex-grow">
-                                    <div className="text-blue-900 font-bold text-lg mb-1">{prof.especialidad}</div>
-                                    <div className="font-semibold text-gray-800 text-lg">{prof.nombre}</div>
-                                    {prof.servicios &&
-                                        <div className="text-gray-600 text-md mt-1">{prof.servicios}</div>
-                                    }
-                                    <div className="mt-2 space-y-1 text-md">
-                                        {prof.web &&
-                                            <div className="text-blue-600 font-medium">
-                                                <a href={prof.web} target="_blank" rel="noopener noreferrer" className="underline">{prof.web}</a>
-                                            </div>
-                                        }
-                                        {prof.telefono &&
-                                            <div className="text-gray-800 font-bold">Cita previa Tlf: {prof.telefono}</div>
-                                        }
-                                    </div>
-                                </div>
-                            </div>
-                        ))}
-                    </div>
-                </div>
-            </div>
-        )
+        content = <ProfesionalesSlide key={slideKey} profesionales={profesionales} />;
     }
 
     return (
         <div className="min-h-screen w-full flex flex-col justify-center items-center">
-            {content}
+            {isLoading && !profesionales.length ? (
+                <div className="text-white text-2xl font-bold mt-20">Cargando profesionales...</div>
+            ) : content}
         </div>
     );
 }
 
-ReactDOM.render(<PantallaTV />, document.getElementById('root'));
+ReactDOM.render(<TVApp />,document.getElementById('root'));
 
 </script>
 </body>
