--- a/tv_add/index.html
+++ b/tv_add/index.html
@@ -1,187 +1,75 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Alquiler Consulta Sanitaria - TV Display</title>
   <style>
-    *{box-sizing:border-box;margin:0;padding:0}
-    html,body{height:100%;font-family:Segoe UI,Roboto,Arial,sans-serif;background:#fff;color:#111}
-    header{background:linear-gradient(135deg,#2563eb,#1e40af);color:#fff;padding:2.5rem 1.5rem;text-align:center}
-    h1{font-size:3.2rem}
-    .price-banner{background:#3b82f6;color:#fff;padding:2rem;text-align:center;font-weight:700}
-    .main-content{padding:1.5rem;display:flex;flex-direction:column;gap:1.5rem;flex:1}
-    .carousel-container{width:100%;height:720px;max-height:80vh;border-radius:12px;overflow:hidden;position:relative;background:#111}
-    .carousel{width:100%;height:100%;position:relative}
-    .carousel-slide{position:absolute;inset:0;opacity:0;transition:opacity 1s ease-in-out;display:flex;align-items:center;justify-content:center;background:#000}
-    .carousel-slide.active{opacity:1}
-    .carousel-slide img{width:100%;height:100%;object-fit:cover;display:block}
-    .carousel-controls{position:absolute;bottom:18px;left:50%;transform:translateX(-50%);display:flex;gap:10px;z-index:20}
-    .carousel-dot{width:14px;height:14px;border-radius:50%;background:rgba(255,255,255,0.4);border:2px solid rgba(0,0,0,0.2);cursor:pointer;transition:all .25s}
-    .carousel-dot.active{background:#fff;transform:scale(1.2);box-shadow:0 0 8px rgba(255,255,255,0.9)}
-    /* Make clickable area obvious on hover (useful if testing on desktop) */
-    .carousel-slide a{display:block;width:100%;height:100%}
-    /* Loading placeholder */
-    .loading{display:flex;align-items:center;justify-content:center;color:#ddd;font-size:1.2rem;height:100%}
-    /* Responsive for big TVs */
-    @media (min-width:1600px){
-      h1{font-size:4rem}
-      .price-banner{font-size:2.4rem}
-      .carousel-container{height:900px}
-    }
+    /* Ajustes pensados para TV */
+    html,body { height:100%; margin:0; background:#000; color:#fff; font-family: "Segoe UI", Roboto, Arial, sans-serif; }
+    .carousel-container { width:100%; height:100vh; overflow:hidden; position:relative; background:#000; }
+    .carousel-slide { position:absolute; inset:0; opacity:0; transition:opacity 1s ease-in-out; display:flex; align-items:center; justify-content:center; }
+    .carousel-slide.active { opacity:1; }
+    .carousel-slide img { width:100%; height:100%; object-fit:cover; display:block; }
+    /* controles mínimos */
+    .carousel-controls{ position:absolute; bottom:24px; left:50%; transform:translateX(-50%); display:flex; gap:10px; z-index:30;}
+    .carousel-dot{ width:14px;height:14px;border-radius:50%;background:rgba(255,255,255,0.4);cursor:pointer; }
+    .carousel-dot.active{ background:#fff; transform:scale(1.2); }
+    body.kiosk { cursor:none; } /* si quieres ocultar cursor en TV */
   </style>
 </head>
-<body>
-  <header>
-    <h1>Alquiler de Consulta Sanitaria</h1>
-    <p style="opacity:.95">CENTRO SANITARIO LARRABIDE</p>
-  </header>
-
-  <div class="price-banner">
-    Alquila tu consulta — desde 180€/mes
-  </div>
-
-  <div class="main-content">
-    <div class="carousel-container" aria-label="Galería de imágenes">
-      <div class="carousel" id="carousel">
-        <div class="loading" id="loading">Cargando imágenes…</div>
-      </div>
-      <div class="carousel-controls" id="carouselControls" aria-hidden="true"></div>
-    </div>
+<body class="kiosk">
+  <div class="carousel-container" id="carousel">
+    <!-- Slides generadas por JS -->
   </div>
 
   <script>
-    /**
-     * Imágenes y enlaces.
-     * - Si solo necesitas la foto, usa "imagen.jpg" (string).
-     * - Si quieres que la foto sea clicable, usa { src: "imagen.jpg", href: "https://..." }.
-     *
-     * Todas las rutas son relativas a esta carpeta tv_add/ (las fotos deben estar junto a este index.html).
-     */
+    // Lista: si usas asset pipeline puedes generar la lista desde Rails (ver nota abajo)
     const images = [
-      "sala1.jpeg",
-      "sala2.jpeg",
-      { src: "salaespera2.jpeg", href: "https://centrosanitariolarrabide.github.io/tv_add/salaespera2.jpeg" },
-      "salaespera3.jpeg",
-      "consulta1.jpeg",
-      // añade/elimina o cambia enlaces según necesites:
-      // { src: "consulta2.jpeg", href: "tel:+34643856807" }  // ejemplo tel:
+      "<%= asset_path 'tv_add/sala1.jpeg' %>",
+      "<%= asset_path 'tv_add/sala2.jpeg' %>",
+      "<%= asset_path 'tv_add/consulta1.jpeg' %>"
+      // ...
     ];
 
     const carousel = document.getElementById('carousel');
-    const controls = document.getElementById('carouselControls');
-    const loading = document.getElementById('loading');
     let current = 0;
-    let intervalId;
+    let interval;
 
-    function normalize(item){
-      if(typeof item === 'string') return { src: item, href: null };
-      if(typeof item === 'object' && item !== null) return { src: item.src, href: item.href || null };
-      return null;
-    }
-
-    function createSlides(){
+    function createSlides() {
       carousel.innerHTML = '';
-      controls.innerHTML = '';
-      const normalized = images.map(normalize).filter(Boolean);
-      if(normalized.length === 0){
-        carousel.innerHTML = '<div class="loading">No hay imágenes.</div>';
-        return;
-      }
-
-      normalized.forEach((imgObj, i) => {
+      images.forEach((src, i) => {
         const slide = document.createElement('div');
-        slide.className = 'carousel-slide' + (i === 0 ? ' active' : '');
-
-        // Si hay enlace, envolvemos la imagen en <a>
-        const wrapper = document.createElement(imgObj.href ? 'a' : 'div');
-        if(imgObj.href){
-          wrapper.href = imgObj.href;
-          wrapper.target = '_blank';
-          wrapper.rel = 'noopener noreferrer';
-          // Si es un teléfono, usar tel: sin target blank por compatibilidad: (target blank no aplica a tel:)
-          if(imgObj.href.startsWith('tel:')){
-            wrapper.target = '';
-          }
-        }
-        wrapper.style.width = '100%';
-        wrapper.style.height = '100%';
-
+        slide.className = 'carousel-slide' + (i===0 ? ' active' : '');
         const img = document.createElement('img');
-        img.src = imgObj.src;
-        img.alt = imgObj.src.replace(/[-_\.]/g,' ').replace(/\bjpeg\b|\bjpg\b/gi,'').replace(/\d+/g,'').trim() || 'Imagen';
-        img.loading = i === 0 ? 'eager' : 'lazy';
-
-        img.onerror = function(){
-          console.warn('Imagen no encontrada:', imgObj.src);
-          // mostrar un placeholder gris si falla
-          this.style.display = 'none';
-          const err = document.createElement('div');
-          err.className = 'loading';
-          err.textContent = 'Imagen no disponible';
-          slide.appendChild(err);
-        };
-
-        wrapper.appendChild(img);
-        slide.appendChild(wrapper);
+        img.src = src;
+        img.alt = src.split('/').pop().replace(/[-_\.]/g,' ');
+        img.loading = i===0 ? 'eager' : 'lazy';
+        slide.appendChild(img);
         carousel.appendChild(slide);
-
-        // dot
-        const dot = document.createElement('span');
-        dot.className = 'carousel-dot' + (i===0 ? ' active' : '');
-        dot.dataset.index = i;
-        dot.addEventListener('click', () => showSlide(i));
-        controls.appendChild(dot);
       });
-
-      if(loading) loading.style.display = 'none';
       startAutoplay();
     }
 
-    function showSlide(n){
+    function showSlide(n) {
       const slides = document.querySelectorAll('.carousel-slide');
-      const dots = document.querySelectorAll('.carousel-dot');
-      if(slides.length === 0) return;
       slides.forEach(s => s.classList.remove('active'));
-      dots.forEach(d => d.classList.remove('active'));
       current = (n + slides.length) % slides.length;
       slides[current].classList.add('active');
-      dots[current].classList.add('active');
     }
 
-    function nextSlide(){ showSlide(current + 1); }
+    function next() { showSlide(current + 1); }
+    function startAutoplay(){ stopAutoplay(); interval = setInterval(next, 5000); }
+    function stopAutoplay(){ if(interval) clearInterval(interval); }
 
-    function startAutoplay(){
-      stopAutoplay();
-      intervalId = setInterval(nextSlide, 5000);
-    }
-    function stopAutoplay(){
-      if(intervalId) clearInterval(intervalId);
-    }
-
-    // Pausar autoplay cuando el usuario interactúe con la página (opcional)
-    carousel.addEventListener('mouseenter', stopAutoplay);
-    carousel.addEventListener('mouseleave', startAutoplay);
-
-    // Inicializar
     createSlides();
-
-    // Opcional: saver overlay (fade a negro) cada 5 minutos
-    const overlay = document.createElement('div');
-    overlay.style.position = 'fixed';
-    overlay.style.inset = '0';
-    overlay.style.background = 'black';
-    overlay.style.opacity = '0';
-    overlay.style.pointerEvents = 'none';
-    overlay.style.transition = 'opacity 2s';
-    document.body.appendChild(overlay);
-    function fadeCycle(){
-      overlay.style.opacity = '1';
-      setTimeout(()=> overlay.style.opacity = '0', 3000);
-    }
-    setInterval(fadeCycle, 5 * 60 * 1000);
-    // primer test a los 10s
-    setTimeout(fadeCycle, 10000);
+    // ocultar cursor tras unos segundos de inactividad (opcional)
+    let timeoutCursor;
+    document.addEventListener('mousemove', () => {
+      document.body.classList.remove('kiosk');
+      clearTimeout(timeoutCursor);
+      timeoutCursor = setTimeout(()=> document.body.classList.add('kiosk'), 2000);
+    });
   </script>
 </body>
 </html>
