--- a/tv_add/index.html
+++ b/tv_add/index.html
@@ -31,7 +31,7 @@
 <body>
   <header>
     <h1>Alquiler de Consulta Sanitaria</h1>
-    <p style="opacity:.95">CENTRO SANITARIO LARRABIDE</p>
+    <p style="opacity:.95">CENTRO SANITARIO LARRABIDE TEF: 643 85 68 07</p>
   </header>
 
   <div class="price-banner">Alquila tu consulta — desde 180€/mes</div>
